~ changing google charts background color ~ fixing the spacing ~ After stats button is pressed, change it to show 'done'

--- a/nginx/public/style.css
+++ b/nginx/public/style.css
@@ -103,5 +103,5 @@ button {
     border: 2px solid #005bbb;
 }
 .addSpace {
-    margin-bottom: 50px;
+    margin-bottom: 80px;
 }
